# airport-app-frontend

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  cambios.txt
assets/components/: card.css  navbar.css
assets/css/: main.css  variables.css
assets/css/components/: autocomplete.css  datepicker.css  footer.css  form.css  navbar.css  passenger.css  search.css
assets/css/pages/: airlines.css  airports.css  landing.css  results.css
assets/pages/: landing.css
docs/: plan.md
src/: app.rs  main.rs
src/api/: airlines.rs  airports.rs
src/components/: airport_autocomplete.rs  card.rs  datepicker.rs  footer.rs  form.rs  mod.rs  navbar.rs  passenger.rs  search.rs
src/models/: airline.rs  airport.rs  search.rs
src/pages/: landing.rs
src/pages/airlines/: create.rs  edit.rs  list.rs  mod.rs
src/pages/airports/: create.rs  edit.rs  list.rs  mod.rs
src/pages/flights/: results.rs
