[package]
name = "airport-app-frontend"
version = "0.1.0"
authors = ["Gerardo Jiménez <gerardojimenez251290@correo.itm.edu.co>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
dioxus-router = "0.7.6"
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen-futures = "0.4"
serde = "1.0.228"
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3.95", features = [
  "Window",
  "EventTarget",
  "MouseEvent",
  "HtmlElement",
] }
wasm-bindgen = "0.2.118"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
